--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="929eff">  <td>22/09/21 12:19:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.ClassSetup()[pri:0, instance:org.hrm.TestNg.createBranchTest@506ae4d4]">&gt;&gt;ClassSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
-<tr bgcolor="97bc88">  <td>22/09/21 12:19:45</td>   <td>1134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="createBranchTest.CreateBranchTest()[pri:0, instance:org.hrm.TestNg.createBranchTest@506ae4d4]">CreateBranchTest</td> 
-  <td>main@91912419</td>   <td></td> </tr>
-<tr bgcolor="929eff">  <td>22/09/21 12:19:45</td>   <td>1144</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.classTeardown()[pri:0, instance:org.hrm.TestNg.createBranchTest@506ae4d4]">&lt;&lt;classTeardown</td> 
+<tr bgcolor="9570b7">  <td>22/10/27 17:01:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.ClassSetup()[pri:0, instance:org.hrm.TestNg.CreateAdminTest@7db12bb6]">&gt;&gt;ClassSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335708295</td>   <td></td> </tr>
+<tr bgcolor="9570b7">  <td>22/10/27 17:01:28</td>   <td>2059</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.classTeardown()[pri:0, instance:org.hrm.TestNg.CreateAdminTest@7db12bb6]">&lt;&lt;classTeardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="929eff">  <td>22/09/21 12:19:45</td>   <td>1141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodTearDown()[pri:0, instance:org.hrm.TestNg.createBranchTest@506ae4d4]">&lt;&lt;methodTearDown</td> 
+<tr bgcolor="78b3da">  <td>22/10/27 17:01:28</td>   <td>2041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateAdminTest.createAdminTest()[pri:0, instance:org.hrm.TestNg.CreateAdminTest@7db12bb6]">createAdminTest</td> 
+  <td>main@335708295</td>   <td></td> </tr>
+<tr bgcolor="9570b7">  <td>22/10/27 17:01:28</td>   <td>2056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.methodTearDown()[pri:0, instance:org.hrm.TestNg.CreateAdminTest@7db12bb6]">&lt;&lt;methodTearDown</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="929eff">  <td>22/09/21 12:19:45</td>   <td>1132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodsetUp()[pri:0, instance:org.hrm.TestNg.createBranchTest@506ae4d4]">&gt;&gt;methodsetUp</td> 
+<tr bgcolor="9570b7">  <td>22/10/27 17:01:28</td>   <td>2038</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodsetUp()[pri:0, instance:org.hrm.TestNg.CreateAdminTest@7db12bb6]">&gt;&gt;methodsetUp</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
